 ** Fixed an incorrect spellID for Spirit Beast Blessing in the IncreasedMastery equivalency.
 ** Groups should now properly show/hide as needed when you change between primary/secondary talents specializations when both specializations are the same.
 ** Condition Object Constructors are now much more reliable (at the cost of some garbage churn when running TMW:Update())
 
===v6.0.3===
 * Re-implemented the stance condition for paladin seals.
 * Minor updates for some buff/debuff equivalancies. Still need help getting these completely up to date, though! If you notice something missing, please let me know!
 * You can now change the event of an event handler once it has been created.
 * New setting for Combat Event icons - Don't Refresh.
 * Added Raid Finder to the Instance Type condition.
 * You can now output text to the UI Errors Frame.
 * Moved the Timers ignore GCD & Bars ignore GCD settings from per-profile to per-icon.
 * Updated Unit Cooldown icons for all cooldown resets in MoP.
 * DR categories should now be complete for MoP. Please report any missing spells.
 * You can once again toggle config mode in combat. You may still get script ran too long errors if TellMeWhen_Options has not been loaded yet and you unlock in combat,  but it won't break anything.
 * You can now reorder groups.
 * Added a setting to make colors ignore the GCD. It is enabled by default.
 * Added center text as a default text layout.
 * New condition: Unit is Player.
 * Unit conditions now allow Lua conditions.
 * Unit conditions now allow you to track the target of the icon's units.
 * Bug fixes:
 ** Fixed static formats again (ICONMENU_MULTISTATECD_DESC)
 ** (Condition ROLE): attempt to index global "roles" (a nil value)
 ** Buff/debuff duration sorting actually works now!
 ** TellMeWhen_Options.lua:3351: attempt to index local "settingsUsedByEvent" (a nil value)
 ** Announcements.lua:531: attempt to concatenate local "Text" (a nil value)